--- a/formatter/src/main/resources/config.json
+++ b/formatter/src/main/resources/config.json
@@ -5,5 +5,6 @@
   "spaceBeforeColon": true,
   "spaceAfterColon": true,
   "newlineAfterSemicolon": true,
-  "spaceBeforePrintln": 1
+  "spaceBeforePrintln": 1,
+  "ifBlockIndent": 1
 }
