diferent order in file

--- a/.github/workflows/publish-project.yml
+++ b/.github/workflows/publish-project.yml
@@ -1,4 +1,4 @@
-name: Publish package to GitHub Packages
+name: Publish package to GitHub Packages ツ
 
 on:
   push:
@@ -7,16 +7,19 @@ on:
 
 jobs:
   publish:
+
     runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           java-version: '11'
           distribution: 'adopt'
+
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
