--- a/.editorconfig
+++ b/.editorconfig
@@ -1,6 +1,9 @@
+# Ktlint uses some properties defined by .editorconfig, IntelliJ IDEA and custom properties.
+# https://pinterest.github.io/ktlint/0.49.0/rules/configuration-ktlint
+
 root = true
 
 [*]
 # indent_style = space
-# indent_size = 4
-max_line_length = 180
+max_line_length = off # use a positive number to set max line length
+insert_final_newline = true
