--- a/buildSrc/src/main/groovy/printscript.app-conventions.gradle
+++ b/buildSrc/src/main/groovy/printscript.app-conventions.gradle
@@ -2,3 +2,7 @@ plugins {
     id 'printscript.common-conventions'
     id 'application'
 }
+
+dependencies {
+    implementation 'com.github.ajalt.clikt:clikt:4.3.0'
+}
