--- a/.github/workflows/publish-project.yml
+++ b/.github/workflows/publish-project.yml
@@ -29,8 +29,11 @@ jobs:
       - name: Setup Gradle
         uses: gradle/gradle-build-action@v2
 
+      - name: Build with Gradle
+        run: ./gradlew build
+
       - name: Publish package
-        run: ./gradlew publish
+        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
           arguments: publish
         env:
