--- a/buildSrc/src/main/groovy/printscript.common-conventions.gradle
+++ b/buildSrc/src/main/groovy/printscript.common-conventions.gradle
@@ -14,7 +14,6 @@ repositories {
 dependencies {
     implementation 'org.jetbrains.kotlin:kotlin-stdlib'
     implementation 'org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.10'
-    implementation 'junit:junit:4.13.1'
     implementation 'org.yaml:snakeyaml:1.28'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.5'
     implementation 'com.fasterxml.jackson.core:jackson-core:2.13.0'
@@ -22,9 +21,11 @@ dependencies {
     implementation 'com.fasterxml.jackson.module:jackson-module-kotlin:2.13.0'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.13.0'
 
-    // testImplementation("org.jetbrains.kotlin:kotlin-test:1.8.10")
-    // testImplementation("org.jetbrains.kotlin:kotlin-test-junit:1.8.10")
-    testImplementation("org.jetbrains.kotlin:kotlin-test")
+    testImplementation 'junit:junit:4.13.1'
+
+    // Dependencias de prueba de Kotlin
+    testImplementation "org.jetbrains.kotlin:kotlin-test:1.8.10"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:1.8.10"
 }
 
 
@@ -33,10 +34,6 @@ tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).configureEach {
     kotlinOptions {
         jvmTarget = "17"
     }
-}
-
-test {
-    useJUnitPlatform()
 }
 
 publishing {
@@ -67,3 +64,22 @@ java {
         languageVersion = JavaLanguageVersion.of(17)
     }
 }
+
+jacoco {
+    toolVersion = "0.8.7"
+}
+
+tasks.test {
+    finalizedBy tasks.jacocoTestReport
+}
+
+tasks.jacocoTestReport {
+    dependsOn tasks.test
+    reports {
+        xml.required.set(true)
+        csv.required.set(false)
+        html.outputLocation.set(layout.buildDirectory.dir("jacocoHtml"))
+    }
+}
+
+build.dependsOn(tasks.named("jacocoTestReport"))
