--- a/cli/src/main/kotlin/.envTest
+++ b/cli/src/main/kotlin/.envTest
@@ -3,3 +3,4 @@ POSTGRES_DB="your_db_name"
 POSTGRES_USER="your_db_user"
 POSTGRES_PASSWORD="your_db_password"
 POSTGRES_HOST="your_db_host"
+MY_ULTRA_SECRET_KEY="Berrets_Secret_Key"
