--- a/buildSrc/src/main/groovy/printscript.common-conventions.gradle
+++ b/buildSrc/src/main/groovy/printscript.common-conventions.gradle
@@ -41,6 +41,7 @@ publishing {
         maven {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/ingsis-group10-2024/printscript")
+            version = "1.1.3"
             credentials {
                 username = System.getenv("GITHUB_USERNAME") ?: ""
                 password = System.getenv("GITHUB_TOKEN") ?: ""
