--- a/buildSrc/src/main/groovy/printscript.common-conventions.gradle
+++ b/buildSrc/src/main/groovy/printscript.common-conventions.gradle
@@ -35,38 +35,18 @@ tasks.register('copyPreCommitHook', Copy) {
     fileMode 0775
 }
 
-//build.dependsOn("copyPreCommitHook")
-//tasks.named("build").configure {
-//    dependsOn("copyPreCommitHook")
-//}
+
+tasks.named("check") {
+    dependsOn tasks.named("ktlintCheck")
+}
+
+tasks.named("build") {
+    dependsOn tasks.named("copyPreCommitHook")
+}
 
 tasks.withType(Test).configureEach {
     useJUnitPlatform()
-}
-
-publishing {
-    repositories {
-        maven {
-            name = "GitHubPackages"
-            url = uri("https://maven.pkg.github.com/ingsis-group10-2024/printscript")
-            version = "1.1.3"
-            credentials {
-                username = System.getenv("GITHUB_USERNAME") ?: ""
-                password = System.getenv("GITHUB_TOKEN") ?: ""
-            }
-        }
-    }
-    publications {
-        gpr(MavenPublication) {
-            from(components.java)
-        }
-    }
-}
-
-
-
-tasks.withType(Test) {
-    finalizedBy 'jacocoTestReport' // Se asegura que la tarea de reporte se ejecute después de las pruebas
+    finalizedBy 'jacocoTestReport'
 }
 
 jacocoTestReport {
@@ -79,4 +59,21 @@ jacocoTestReport {
 
 
 
-check.dependsOn jacocoTestCoverageVerification // Asegura que la verificación de cobertura se ejecute con la tarea check
+publishing {
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/ingsis-group10-2024/printscript")
+            version = "2.1.0-SNAPSHOT"
+            credentials {
+                username = System.getenv("GITHUB_USERNAME") ?: ""
+                password = System.getenv("GITHUB_TOKEN") ?: ""
+            }
+        }
+    }
+    publications {
+        gpr(MavenPublication) {
+            from(components.java)
+        }
+    }
+}
