--- a/.github/workflows/publish-project.yml
+++ b/.github/workflows/publish-project.yml
@@ -4,37 +4,22 @@ on:
   push:
     branches:
       - main
+  workflow_dispatch:                                        # para correr manualmente
 
 jobs:
-  publish:
-
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
-      packages: write
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-java@v3
+      - uses: actions/checkout@v2                           # clona el repo en una vm de github actions
+      - name: Set up JDK 11                                 # instala JDK 11
+        uses: actions/setup-java@v1
         with:
-          java-version: '11'
-          distribution: 'adopt'
-
-      - name: Grant execute permission for gradlew
-        run: chmod +x gradlew
-
-      - name: Validate Gradle wrapper
-        uses: gradle/wrapper-validation-action@e6e38bacfdf1a337459f332974bb2327a31aaf4b
-
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-
+          java-version: 11
       - name: Build with Gradle
         run: ./gradlew build
-
       - name: Publish package
-        uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-        with:
-          arguments: publish
+        run: gradle publish
         env:
-          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+          GITHUB_ACTOR: ${{ env.GITHUB_ACTOR }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
