--- a/.github/workflows/publish-project.yml
+++ b/.github/workflows/publish-project.yml
@@ -23,10 +23,8 @@ jobs:
       - name: Build with Gradle
         run: ./gradlew build
 
-      # The USERNAME and TOKEN need to correspond to the credentials environment variables used in
-      # the publishing section of your build.gradle
       - name: Publish to GitHub Packages
         run: ./gradlew publish
         env:
-          GITHUB_ACTOR: ${{ env.GITHUB_ACTOR }}
+          GITHUB_ACTOR: ${{ env.GITHUB_USERNAME }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
