--- a/.github/workflows/publish-project.yml
+++ b/.github/workflows/publish-project.yml
@@ -27,4 +27,4 @@ jobs:
         run: ./gradlew publish
         env:
           GITHUB_ACTOR: ${{ env.GITHUB_USERNAME }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
