--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,8 @@
 
 root = true
 
-[*]
-# indent_style = space
-# max_line_length = 180 # use a positive number to set max line length
+[*.{kt,kts}]
+indent_size = 4                 # possible values: number (e.g. 2), "unset" (makes ktlint ignore indentation completely)
+indent_style = tab              # or "space"
+max_line_length = off           # or 180, use a positive number to set max line length
 insert_final_newline = true
