--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,12 @@
 root = true
 
 [*.{kt,kts}]
-indent_size = 4                 # possible values: number (e.g. 2), "unset" (makes ktlint ignore indentation completely)
-indent_style = tab              # or "space"
-max_line_length = off           # or 180, use a positive number to set max line length
+# or 2, 8..  use an integer number
+indent_size = 4
+
+# or 'tab'
+indent_style = space
+
+# or 180, use a positive number to set max line length
+max_line_length = off
 insert_final_newline = true
