--- a/buildSrc/src/main/groovy/printscript.common-conventions.gradle
+++ b/buildSrc/src/main/groovy/printscript.common-conventions.gradle
@@ -62,7 +62,7 @@ publishing {
         maven {
             name = "GitHubPackages"
             url = uri("https://maven.pkg.github.com/ingsis-group10-2024/printscript")
-            version = "2.1.7-SNAPSHOT"
+            version = "2.1.8"
             credentials {
                 username = System.getenv("GITHUB_USERNAME") ?: ""
                 password = System.getenv("GITHUB_TOKEN") ?: ""
