--- a/.github/workflows/publish-project.yml
+++ b/.github/workflows/publish-project.yml
@@ -26,5 +26,5 @@ jobs:
       - name: Publish to GitHub Packages
         run: ./gradlew publish
         env:
-          GITHUB_ACTOR: ${{ env.GITHUB_USERNAME }}
+          GITHUB_ACTOR: ${{ github.repository_owner }} }}
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
